grammar/Parser.output
Grammar

    0 $accept: start "end of file"

    1 scalartype: INTEGER
    2           | DOUBLE
    3           | COMPLEX
    4           | CHARACTER
    5           | LOGICAL
    6           | RAW

    7 environmenttype: ENVIRONMENT

    8 expressiontype: EXPRESSION

    9 languagetype: LANGUAGE

   10 symboltype: SYMBOL

   11 externalptrtype: EXTERNALPOINTER

   12 bytecodetype: BYTECODE

   13 pairlisttype: PAIRLIST

   14 s4type: S4

   15 weakreftype: WEAKREF

   16 anytype: ANY

   17 vectortype: scalartype "[" "]"

   18 nonavectortype: "!" vectortype

   19 listtype: "((" typeseq "))"

   20 typeseq: %empty
   21        | type
   22        | typeseq "," type

   23 structtype: "{{" namedtypeseq "}}"

   24 identifier: INTEGER
   25           | DOUBLE
   26           | COMPLEX
   27           | CHARACTER
   28           | LOGICAL
   29           | RAW
   30           | ENVIRONMENT
   31           | EXPRESSION
   32           | LANGUAGE
   33           | SYMBOL
   34           | EXTERNALPOINTER
   35           | BYTECODE
   36           | PAIRLIST
   37           | S4
   38           | ANY
   39           | TYPEDECL
   40           | "..."
   41           | IDENTIFIER

   42 namedtype: identifier ":" type

   43 namedtypeseq: %empty
   44             | namedtype
   45             | namedtypeseq "," namedtype

   46 paramtype: type
   47          | "..."

   48 paramtypeseq: %empty
   49             | paramtype
   50             | paramtypeseq "," paramtype

   51 functiontype: "<" paramtypeseq ">" "=>" type

   52 grouptype: "(" type ")"

   53 nonuniontype: scalartype
   54             | environmenttype
   55             | expressiontype
   56             | languagetype
   57             | symboltype
   58             | externalptrtype
   59             | bytecodetype
   60             | pairlisttype
   61             | s4type
   62             | weakreftype
   63             | vectortype
   64             | nonavectortype
   65             | functiontype
   66             | structtype
   67             | listtype
   68             | grouptype

   69 innertype: nonuniontype
   70          | innertype "|" nonuniontype

   71 nulltype: "?"
   72         | "?" innertype

   73 type: innertype
   74     | nulltype
   75     | anytype

   76 decltype: TYPEDECL identifier type ";"

   77 decllist: decltype
   78         | decllist decltype

   79 start: "end of file"
   80      | decllist "end of file"


Terminals, with rules where they appear

    "end of file" (0) 0 79 80
    error (256)
    "|" <std::string> (258) 70
    "!" <std::string> (259) 18
    "=>" <std::string> (260) 51
    "," <std::string> (261) 22 45 50
    "((" <std::string> (262) 19
    "(" <std::string> (263) 52
    "))" <std::string> (264) 19
    ")" <std::string> (265) 52
    "[" <std::string> (266) 17
    "]" <std::string> (267) 17
    "<" <std::string> (268) 51
    ">" <std::string> (269) 51
    "{{" <std::string> (270) 23
    "}}" <std::string> (271) 23
    ";" <std::string> (272) 76
    ":" <std::string> (273) 42
    "..." <std::string> (274) 40 47
    "?" <std::string> (275) 71 72
    INTEGER <std::string> (276) 1 24
    DOUBLE <std::string> (277) 2 25
    COMPLEX <std::string> (278) 3 26
    CHARACTER <std::string> (279) 4 27
    LOGICAL <std::string> (280) 5 28
    RAW <std::string> (281) 6 29
    ENVIRONMENT <std::string> (282) 7 30
    EXPRESSION <std::string> (283) 8 31
    LANGUAGE <std::string> (284) 9 32
    SYMBOL <std::string> (285) 10 33
    EXTERNALPOINTER <std::string> (286) 11 34
    BYTECODE <std::string> (287) 12 35
    PAIRLIST <std::string> (288) 13 36
    S4 <std::string> (289) 14 37
    WEAKREF <std::string> (290) 15
    ANY <std::string> (291) 16 38
    TYPEDECL <std::string> (292) 39 76
    IDENTIFIER <std::string> (293) 41
    LOWER_THAN_OR (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    scalartype <ScalarTypeNodePtr> (41)
        on left: 1 2 3 4 5 6
        on right: 17 53
    environmenttype <EnvironmentTypeNodePtr> (42)
        on left: 7
        on right: 54
    expressiontype <ExpressionTypeNodePtr> (43)
        on left: 8
        on right: 55
    languagetype <LanguageTypeNodePtr> (44)
        on left: 9
        on right: 56
    symboltype <SymbolTypeNodePtr> (45)
        on left: 10
        on right: 57
    externalptrtype <ExternalPointerTypeNodePtr> (46)
        on left: 11
        on right: 58
    bytecodetype <BytecodeTypeNodePtr> (47)
        on left: 12
        on right: 59
    pairlisttype <PairlistTypeNodePtr> (48)
        on left: 13
        on right: 60
    s4type <S4TypeNodePtr> (49)
        on left: 14
        on right: 61
    weakreftype <WeakReferenceTypeNodePtr> (50)
        on left: 15
        on right: 62
    anytype <AnyTypeNodePtr> (51)
        on left: 16
        on right: 75
    vectortype <VectorTypeNodePtr> (52)
        on left: 17
        on right: 18 63
    nonavectortype <NoNaTypeNodePtr> (53)
        on left: 18
        on right: 64
    typeseq <TypeNodeSequenceNodePtr> (54)
        on left: 20 21 22
        on right: 19 22
    namedtype <TagTypePairNodePtr> (55)
        on left: 42
        on right: 44 45
    namedtypeseq <TagTypePairNodeSequenceNodePtr> (56)
        on left: 43 44 45
        on right: 23 45
    paramtype <TypeNodePtr> (57)
        on left: 46 47
        on right: 49 50
    paramtypeseq <TypeNodeSequenceNodePtr> (58)
        on left: 48 49 50
        on right: 50 51
    functiontype <FunctionTypeNodePtr> (59)
        on left: 51
        on right: 65
    grouptype <GroupTypeNodePtr> (60)
        on left: 52
        on right: 68
    nonuniontype <TypeNodePtr> (61)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 69 70
    listtype <ListTypeNodePtr> (62)
        on left: 19
        on right: 67
    structtype <StructTypeNodePtr> (63)
        on left: 23
        on right: 66
    identifier <IdentifierNodePtr> (64)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 42 76
    innertype <TypeNodePtr> (65)
        on left: 69 70
        on right: 70 72 73
    nulltype <TypeNodePtr> (66)
        on left: 71 72
        on right: 74
    type <TypeNodePtr> (67)
        on left: 73 74 75
        on right: 21 22 42 46 51 52 76
    decltype <TypeDeclarationNodePtr> (68)
        on left: 76
        on right: 77 78
    decllist (69)
        on left: 77 78
        on right: 78 80
    start (70)
        on left: 79 80
        on right: 0


State 0

    0 $accept: . start "end of file"

    "end of file"  shift, and go to state 1
    TYPEDECL       shift, and go to state 2

    decltype  go to state 3
    decllist  go to state 4
    start     go to state 5


State 1

   79 start: "end of file" .

    $default  reduce using rule 79 (start)


State 2

   76 decltype: TYPEDECL . identifier type ";"

    "..."            shift, and go to state 6
    INTEGER          shift, and go to state 7
    DOUBLE           shift, and go to state 8
    COMPLEX          shift, and go to state 9
    CHARACTER        shift, and go to state 10
    LOGICAL          shift, and go to state 11
    RAW              shift, and go to state 12
    ENVIRONMENT      shift, and go to state 13
    EXPRESSION       shift, and go to state 14
    LANGUAGE         shift, and go to state 15
    SYMBOL           shift, and go to state 16
    EXTERNALPOINTER  shift, and go to state 17
    BYTECODE         shift, and go to state 18
    PAIRLIST         shift, and go to state 19
    S4               shift, and go to state 20
    ANY              shift, and go to state 21
    TYPEDECL         shift, and go to state 22
    IDENTIFIER       shift, and go to state 23

    identifier  go to state 24


State 3

   77 decllist: decltype .

    $default  reduce using rule 77 (decllist)


State 4

   78 decllist: decllist . decltype
   80 start: decllist . "end of file"

    "end of file"  shift, and go to state 25
    TYPEDECL       shift, and go to state 2

    decltype  go to state 26


State 5

    0 $accept: start . "end of file"

    "end of file"  shift, and go to state 27


State 6

   40 identifier: "..." .

    $default  reduce using rule 40 (identifier)


State 7

   24 identifier: INTEGER .

    $default  reduce using rule 24 (identifier)


State 8

   25 identifier: DOUBLE .

    $default  reduce using rule 25 (identifier)


State 9

   26 identifier: COMPLEX .

    $default  reduce using rule 26 (identifier)


State 10

   27 identifier: CHARACTER .

    $default  reduce using rule 27 (identifier)


State 11

   28 identifier: LOGICAL .

    $default  reduce using rule 28 (identifier)


State 12

   29 identifier: RAW .

    $default  reduce using rule 29 (identifier)


State 13

   30 identifier: ENVIRONMENT .

    $default  reduce using rule 30 (identifier)


State 14

   31 identifier: EXPRESSION .

    $default  reduce using rule 31 (identifier)


State 15

   32 identifier: LANGUAGE .

    $default  reduce using rule 32 (identifier)


State 16

   33 identifier: SYMBOL .

    $default  reduce using rule 33 (identifier)


State 17

   34 identifier: EXTERNALPOINTER .

    $default  reduce using rule 34 (identifier)


State 18

   35 identifier: BYTECODE .

    $default  reduce using rule 35 (identifier)


State 19

   36 identifier: PAIRLIST .

    $default  reduce using rule 36 (identifier)


State 20

   37 identifier: S4 .

    $default  reduce using rule 37 (identifier)


State 21

   38 identifier: ANY .

    $default  reduce using rule 38 (identifier)


State 22

   39 identifier: TYPEDECL .

    $default  reduce using rule 39 (identifier)


State 23

   41 identifier: IDENTIFIER .

    $default  reduce using rule 41 (identifier)


State 24

   76 decltype: TYPEDECL identifier . type ";"

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 70


State 25

   80 start: decllist "end of file" .

    $default  reduce using rule 80 (start)


State 26

   78 decllist: decllist decltype .

    $default  reduce using rule 78 (decllist)


State 27

    0 $accept: start "end of file" .

    $default  accept


State 28

   18 nonavectortype: "!" . vectortype

    INTEGER    shift, and go to state 34
    DOUBLE     shift, and go to state 35
    COMPLEX    shift, and go to state 36
    CHARACTER  shift, and go to state 37
    LOGICAL    shift, and go to state 38
    RAW        shift, and go to state 39

    scalartype  go to state 71
    vectortype  go to state 72


State 29

   19 listtype: "((" . typeseq "))"

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    $default  reduce using rule 20 (typeseq)

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    typeseq          go to state 73
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 74


State 30

   52 grouptype: "(" . type ")"

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 75


State 31

   51 functiontype: "<" . paramtypeseq ">" "=>" type

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "..."            shift, and go to state 76
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    $default  reduce using rule 48 (paramtypeseq)

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    paramtype        go to state 77
    paramtypeseq     go to state 78
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 79


State 32

   23 structtype: "{{" . namedtypeseq "}}"

    "..."            shift, and go to state 6
    INTEGER          shift, and go to state 7
    DOUBLE           shift, and go to state 8
    COMPLEX          shift, and go to state 9
    CHARACTER        shift, and go to state 10
    LOGICAL          shift, and go to state 11
    RAW              shift, and go to state 12
    ENVIRONMENT      shift, and go to state 13
    EXPRESSION       shift, and go to state 14
    LANGUAGE         shift, and go to state 15
    SYMBOL           shift, and go to state 16
    EXTERNALPOINTER  shift, and go to state 17
    BYTECODE         shift, and go to state 18
    PAIRLIST         shift, and go to state 19
    S4               shift, and go to state 20
    ANY              shift, and go to state 21
    TYPEDECL         shift, and go to state 22
    IDENTIFIER       shift, and go to state 23

    $default  reduce using rule 43 (namedtypeseq)

    namedtype     go to state 80
    namedtypeseq  go to state 81
    identifier    go to state 82


State 33

   71 nulltype: "?" .
   72         | "?" . innertype

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48

    $default  reduce using rule 71 (nulltype)

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    vectortype       go to state 61
    nonavectortype   go to state 62
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 83


State 34

    1 scalartype: INTEGER .

    $default  reduce using rule 1 (scalartype)


State 35

    2 scalartype: DOUBLE .

    $default  reduce using rule 2 (scalartype)


State 36

    3 scalartype: COMPLEX .

    $default  reduce using rule 3 (scalartype)


State 37

    4 scalartype: CHARACTER .

    $default  reduce using rule 4 (scalartype)


State 38

    5 scalartype: LOGICAL .

    $default  reduce using rule 5 (scalartype)


State 39

    6 scalartype: RAW .

    $default  reduce using rule 6 (scalartype)


State 40

    7 environmenttype: ENVIRONMENT .

    $default  reduce using rule 7 (environmenttype)


State 41

    8 expressiontype: EXPRESSION .

    $default  reduce using rule 8 (expressiontype)


State 42

    9 languagetype: LANGUAGE .

    $default  reduce using rule 9 (languagetype)


State 43

   10 symboltype: SYMBOL .

    $default  reduce using rule 10 (symboltype)


State 44

   11 externalptrtype: EXTERNALPOINTER .

    $default  reduce using rule 11 (externalptrtype)


State 45

   12 bytecodetype: BYTECODE .

    $default  reduce using rule 12 (bytecodetype)


State 46

   13 pairlisttype: PAIRLIST .

    $default  reduce using rule 13 (pairlisttype)


State 47

   14 s4type: S4 .

    $default  reduce using rule 14 (s4type)


State 48

   15 weakreftype: WEAKREF .

    $default  reduce using rule 15 (weakreftype)


State 49

   16 anytype: ANY .

    $default  reduce using rule 16 (anytype)


State 50

   17 vectortype: scalartype . "[" "]"
   53 nonuniontype: scalartype .

    "["  shift, and go to state 84

    $default  reduce using rule 53 (nonuniontype)


State 51

   54 nonuniontype: environmenttype .

    $default  reduce using rule 54 (nonuniontype)


State 52

   55 nonuniontype: expressiontype .

    $default  reduce using rule 55 (nonuniontype)


State 53

   56 nonuniontype: languagetype .

    $default  reduce using rule 56 (nonuniontype)


State 54

   57 nonuniontype: symboltype .

    $default  reduce using rule 57 (nonuniontype)


State 55

   58 nonuniontype: externalptrtype .

    $default  reduce using rule 58 (nonuniontype)


State 56

   59 nonuniontype: bytecodetype .

    $default  reduce using rule 59 (nonuniontype)


State 57

   60 nonuniontype: pairlisttype .

    $default  reduce using rule 60 (nonuniontype)


State 58

   61 nonuniontype: s4type .

    $default  reduce using rule 61 (nonuniontype)


State 59

   62 nonuniontype: weakreftype .

    $default  reduce using rule 62 (nonuniontype)


State 60

   75 type: anytype .

    $default  reduce using rule 75 (type)


State 61

   63 nonuniontype: vectortype .

    $default  reduce using rule 63 (nonuniontype)


State 62

   64 nonuniontype: nonavectortype .

    $default  reduce using rule 64 (nonuniontype)


State 63

   65 nonuniontype: functiontype .

    $default  reduce using rule 65 (nonuniontype)


State 64

   68 nonuniontype: grouptype .

    $default  reduce using rule 68 (nonuniontype)


State 65

   69 innertype: nonuniontype .

    $default  reduce using rule 69 (innertype)


State 66

   67 nonuniontype: listtype .

    $default  reduce using rule 67 (nonuniontype)


State 67

   66 nonuniontype: structtype .

    $default  reduce using rule 66 (nonuniontype)


State 68

   70 innertype: innertype . "|" nonuniontype
   73 type: innertype .

    "|"  shift, and go to state 85

    $default  reduce using rule 73 (type)


State 69

   74 type: nulltype .

    $default  reduce using rule 74 (type)


State 70

   76 decltype: TYPEDECL identifier type . ";"

    ";"  shift, and go to state 86


State 71

   17 vectortype: scalartype . "[" "]"

    "["  shift, and go to state 84


State 72

   18 nonavectortype: "!" vectortype .

    $default  reduce using rule 18 (nonavectortype)


State 73

   19 listtype: "((" typeseq . "))"
   22 typeseq: typeseq . "," type

    ","   shift, and go to state 87
    "))"  shift, and go to state 88


State 74

   21 typeseq: type .

    $default  reduce using rule 21 (typeseq)


State 75

   52 grouptype: "(" type . ")"

    ")"  shift, and go to state 89


State 76

   47 paramtype: "..." .

    $default  reduce using rule 47 (paramtype)


State 77

   49 paramtypeseq: paramtype .

    $default  reduce using rule 49 (paramtypeseq)


State 78

   50 paramtypeseq: paramtypeseq . "," paramtype
   51 functiontype: "<" paramtypeseq . ">" "=>" type

    ","  shift, and go to state 90
    ">"  shift, and go to state 91


State 79

   46 paramtype: type .

    $default  reduce using rule 46 (paramtype)


State 80

   44 namedtypeseq: namedtype .

    $default  reduce using rule 44 (namedtypeseq)


State 81

   23 structtype: "{{" namedtypeseq . "}}"
   45 namedtypeseq: namedtypeseq . "," namedtype

    ","   shift, and go to state 92
    "}}"  shift, and go to state 93


State 82

   42 namedtype: identifier . ":" type

    ":"  shift, and go to state 94


State 83

   70 innertype: innertype . "|" nonuniontype
   72 nulltype: "?" innertype .

    "|"  shift, and go to state 85

    $default  reduce using rule 72 (nulltype)


State 84

   17 vectortype: scalartype "[" . "]"

    "]"  shift, and go to state 95


State 85

   70 innertype: innertype "|" . nonuniontype

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    vectortype       go to state 61
    nonavectortype   go to state 62
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 96
    listtype         go to state 66
    structtype       go to state 67


State 86

   76 decltype: TYPEDECL identifier type ";" .

    $default  reduce using rule 76 (decltype)


State 87

   22 typeseq: typeseq "," . type

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 97


State 88

   19 listtype: "((" typeseq "))" .

    $default  reduce using rule 19 (listtype)


State 89

   52 grouptype: "(" type ")" .

    $default  reduce using rule 52 (grouptype)


State 90

   50 paramtypeseq: paramtypeseq "," . paramtype

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "..."            shift, and go to state 76
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    paramtype        go to state 98
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 79


State 91

   51 functiontype: "<" paramtypeseq ">" . "=>" type

    "=>"  shift, and go to state 99


State 92

   45 namedtypeseq: namedtypeseq "," . namedtype

    "..."            shift, and go to state 6
    INTEGER          shift, and go to state 7
    DOUBLE           shift, and go to state 8
    COMPLEX          shift, and go to state 9
    CHARACTER        shift, and go to state 10
    LOGICAL          shift, and go to state 11
    RAW              shift, and go to state 12
    ENVIRONMENT      shift, and go to state 13
    EXPRESSION       shift, and go to state 14
    LANGUAGE         shift, and go to state 15
    SYMBOL           shift, and go to state 16
    EXTERNALPOINTER  shift, and go to state 17
    BYTECODE         shift, and go to state 18
    PAIRLIST         shift, and go to state 19
    S4               shift, and go to state 20
    ANY              shift, and go to state 21
    TYPEDECL         shift, and go to state 22
    IDENTIFIER       shift, and go to state 23

    namedtype   go to state 100
    identifier  go to state 82


State 93

   23 structtype: "{{" namedtypeseq "}}" .

    $default  reduce using rule 23 (structtype)


State 94

   42 namedtype: identifier ":" . type

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 101


State 95

   17 vectortype: scalartype "[" "]" .

    $default  reduce using rule 17 (vectortype)


State 96

   70 innertype: innertype "|" nonuniontype .

    $default  reduce using rule 70 (innertype)


State 97

   22 typeseq: typeseq "," type .

    $default  reduce using rule 22 (typeseq)


State 98

   50 paramtypeseq: paramtypeseq "," paramtype .

    $default  reduce using rule 50 (paramtypeseq)


State 99

   51 functiontype: "<" paramtypeseq ">" "=>" . type

    "!"              shift, and go to state 28
    "(("             shift, and go to state 29
    "("              shift, and go to state 30
    "<"              shift, and go to state 31
    "{{"             shift, and go to state 32
    "?"              shift, and go to state 33
    INTEGER          shift, and go to state 34
    DOUBLE           shift, and go to state 35
    COMPLEX          shift, and go to state 36
    CHARACTER        shift, and go to state 37
    LOGICAL          shift, and go to state 38
    RAW              shift, and go to state 39
    ENVIRONMENT      shift, and go to state 40
    EXPRESSION       shift, and go to state 41
    LANGUAGE         shift, and go to state 42
    SYMBOL           shift, and go to state 43
    EXTERNALPOINTER  shift, and go to state 44
    BYTECODE         shift, and go to state 45
    PAIRLIST         shift, and go to state 46
    S4               shift, and go to state 47
    WEAKREF          shift, and go to state 48
    ANY              shift, and go to state 49

    scalartype       go to state 50
    environmenttype  go to state 51
    expressiontype   go to state 52
    languagetype     go to state 53
    symboltype       go to state 54
    externalptrtype  go to state 55
    bytecodetype     go to state 56
    pairlisttype     go to state 57
    s4type           go to state 58
    weakreftype      go to state 59
    anytype          go to state 60
    vectortype       go to state 61
    nonavectortype   go to state 62
    functiontype     go to state 63
    grouptype        go to state 64
    nonuniontype     go to state 65
    listtype         go to state 66
    structtype       go to state 67
    innertype        go to state 68
    nulltype         go to state 69
    type             go to state 102


State 100

   45 namedtypeseq: namedtypeseq "," namedtype .

    $default  reduce using rule 45 (namedtypeseq)


State 101

   42 namedtype: identifier ":" type .

    $default  reduce using rule 42 (namedtype)


State 102

   51 functiontype: "<" paramtypeseq ">" "=>" type .

    $default  reduce using rule 51 (functiontype)
